fixed spacing

--- a/src/css/partials/header.css
+++ b/src/css/partials/header.css
@@ -74,8 +74,8 @@
 .global-nav__section-heading {
   margin-top: 0;
   margin-bottom: 0;
-  padding: .625rem .625rem;
-  font-size: 1.25rem;
+  padding: .75rem .75rem;
+  font-size: 1.35rem;
 }
 
 .section-heading--blue {
@@ -99,6 +99,8 @@
 .global-nav__list {
   padding-left: 0;
   margin-left: 0;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 .global-nav__split-button > button {
@@ -121,7 +123,6 @@
   z-index: 1;
   margin-right: 10px;
   width: 100%;
-  padding: .5rem;
   line-height: 3rem;
   overflow: hidden;
   font-size: .8em;
